--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,9 @@ command: "--innodb_use_native_aio=0"
 volumes:
 - "./conf.d:/etc/mysql/conf.d:ro"
 - "./data.d:/var/lib/mysql"
+webapp:
+image: se441/spring-petclinic:both
+ports:
+- "8484:8080/tcp"
+depends_on:
+- mysql
